Support for addModules in all tasks (#21)